# airbeam

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  copilotCLI_resume.md  docker-compose.yml
.github/: FUNDING.yml  appcast.xml
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
.specify/scripts/powershell/: check-locale-keys.ps1
docs/: release-process.md
installer/: AirBeam.nsi
installer/licenses/: bonjour-sdk-license.txt  combined-license.txt
resources/: AirBeam.manifest  AirBeam.rc  AirBeam.rc.in  resource.h  resource_ids.h  sparkle_pubkey.txt
resources/icons/: validate_icons.ps1
resources/icons/src/: gen_icons.ps1
resources/locales/: strings_de.rc  strings_en.rc  strings_es.rc  strings_fr.rc  strings_ja.rc  strings_ko.rc  strings_zh-Hans.rc
specs/: airplay-sender-spec.md  roadmap.md
specs/001-airplay-audio-sender/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-airplay-audio-sender/checklists/: requirements.md
specs/001-airplay-audio-sender/contracts/: config-schema.md  raop-session.md  rtp-packet.md  tray-menu.md
specs/002-ci-build-hardening/: plan.md  spec.md  tasks.md
specs/003-branded-tray-icons/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-branded-tray-icons/contracts/: ico-format.md
specs/004-winsparkle-autoupdate/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-winsparkle-autoupdate/checklists/: requirements.md
specs/004-winsparkle-autoupdate/contracts/: appcast-schema.md
specs/005-bonjour-install-guidance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-bonjour-install-guidance/contracts/: balloon-text.md
specs/006-bundle-bonjour-installer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-bundle-bonjour-installer/checklists/: requirements.md
specs/007-wasapi-loopback-capture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-wasapi-loopback-capture/checklists/: requirements.md
specs/007-wasapi-loopback-capture/contracts/: audio-message-protocol.md  audioframe-format.md  wasapi-capture-api.md
specs/008-mdns-tray-discovery/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-mdns-tray-discovery/checklists/: requirements.md
specs/008-mdns-tray-discovery/contracts/: menu-command-ids.md  txt-record-parsing.md  wm-messages.md
specs/009-connection-controller/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-connection-controller/checklists/: requirements.md
specs/009-connection-controller/contracts/: connection-controller-api.md  messages.md  state-machine.md
specs/010-airplay2-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-airplay2-support/checklists/: requirements.md
specs/010-airplay2-support/contracts/: airplay2-session-api.md  credential-store.md
src/: main.cpp  resource_ids.h  version.h.in
src/airplay2/: AesGcmCipher.cpp  AesGcmCipher.h  AirPlay2Session.cpp  AirPlay2Session.h  CredentialStore.cpp  CredentialStore.h  HapPairing.cpp  HapPairing.h  PtpClock.cpp  PtpClock.h
src/audio/: AlacEncoderThread.cpp  AlacEncoderThread.h  AudioFrame.h  Resampler.cpp  Resampler.h  SpscRingBuffer.h  WasapiCapture.cpp  WasapiCapture.h
src/core/: AppController.cpp  AppController.h  Commands.h  Config.cpp  Config.h  ConnectionController.cpp  ConnectionController.h  Logger.cpp  Logger.h  Messages.h  PipelineState.h  ReconnectContext.h  StreamSession.cpp  StreamSession.h
src/discovery/: AirPlayReceiver.h  BonjourLoader.cpp  BonjourLoader.h  MdnsDiscovery.cpp  MdnsDiscovery.h  ReceiverList.cpp  ReceiverList.h  TxtRecord.cpp  TxtRecord.h
src/localization/: StringLoader.cpp  StringLoader.h
src/protocol/: AesCbcCipher.cpp  AesCbcCipher.h  NtpClock.cpp  NtpClock.h  RaopSession.cpp  RaopSession.h  RetransmitBuffer.cpp  RetransmitBuffer.h  RsaKeyWrap.cpp  RsaKeyWrap.h  RtpPacket.h  SdpBuilder.cpp  SdpBuilder.h  VolumeMapper.cpp  VolumeMapper.h
src/ui/: BalloonNotify.cpp  BalloonNotify.h  CustomPopup.cpp  CustomPopup.h  MenuIds.h  MenuVolumeSlider.cpp  MenuVolumeSlider.h  PinDialog.cpp  PinDialog.h  StartupRegistry.cpp  StartupRegistry.h  TrayIcon.cpp  TrayIcon.h  TrayMenu.cpp  TrayMenu.h  VolumePopup.cpp  VolumePopup.h
src/update/: SparkleIntegration.cpp  SparkleIntegration.h
tests/: CMakeLists.txt
tests/e2e/: test_1khz_sine.cpp  test_stress_24h.cpp
tests/integration/: AirBeamControl.ps1  Test-Connection.ps1  test_airplay2_session.cpp  test_raop_shairport.cpp  test_wasapi_correlation.cpp
tests/stress/: .gitignore  monitor_stress_test.ps1
tests/unit/: test_aes_gcm.cpp  test_aes_vectors.cpp  test_alac_roundtrip.cpp  test_config.cpp  test_connection_controller.cpp  test_credential_store.cpp  test_frame_accumulator.cpp  test_hap_pairing.cpp  test_mdns_txt.cpp  test_receiver_list.cpp  test_resampler.cpp  test_rtp_framing.cpp  test_spsc_ring.cpp  test_tray_menu.cpp  test_volume_mapper.cpp  test_wasapi_stop_start.cpp
